# insomnia-bot

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build.yml  docker-publish.yml
src/: config.rs  error.rs  events.rs  main.rs  message.rs  msg.rs  package_update.rs
src/link_embed/: dubz.rs  mod.rs  reddit.rs  tweet.rs
src/link_embed/media/: dubz.rs  imgur.rs  mod.rs  streamable.rs
src/music/: commands.rs  error.rs  events.rs  loudness.rs  message.rs  mod.rs  queue.rs  sponsorblock.rs  voice.rs  youtube_loudness.rs  youtube_music.rs  youtube_playlist.rs
src/music/spotify/: auth.rs
src/music/youtube/: loudness.rs  mod.rs  music.rs  music_autocomplete.rs  playlist.rs  sponsorblock.rs
src/patchbot_forwarder/: commands.rs  entity.rs  error.rs  forwarder.rs  helpers.rs  mod.rs
src/twitter_embed/: mod.rs  send_tweet_embed.rs
src/util/: array2d.rs  lcs.rs  mod.rs
