[package]
name = "insomnia-bot"
version = "0.2.0"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2021"

# [profile.release]
# lto = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
if_chain = "1.0"
itertools = "0.10"
markdown = "0.3"
once_cell = "1.14"
poise = "0.5"
pyo3 = "0.17"
regex = "1.6"
serde_json = "1.0"
toml = "0.5"
unicode-segmentation = "1.10"
url = "2.3"

[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.21"
features = ["macros", "rt-multi-thread", "signal", "time"]

[dependencies.sea-orm]
version = "0.11"
features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]

[dev-dependencies]
approx = "0.5"
