[package]
name = "insomnia-bot"
version = "0.2.0"
authors = ["Evan Chang <evanc577@gmail.com>"]
edition = "2021"

# [profile.release]
# lto = true

[dependencies]
anyhow = "1.0"
futures = "0.3"
if_chain = "1.0"
indextree = "4.6.1"
itertools = "0.14"
markdown = "1.0"
poise = "0.5"
pyo3 = "0.27"
regex = "1.10"
serde_json = "1.0"
toml = "0.9"
unicode-segmentation = "1.10"
url = "2.4"

[dependencies.figment]
version = "0.10"
features = ["toml", "env"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.songbird]
version = "0.3"
features = ["builtin-queue", "yt-dlp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.33"
features = ["macros", "rt-multi-thread", "signal", "time"]

[dependencies.sea-orm]
version = "0.11"
features = ["macros", "sqlx-postgres", "runtime-tokio-rustls"]

[dependencies.time]
version = "0.3"
features = ["macros", "parsing", "formatting"]

[dev-dependencies]
approx = "0.5"
